testing/whoami/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oidc-auth
  namespace: whoami
spec:
  plugin:
    traefik-oidc-auth:
      secret: urn:k8s:secret:whoami-oidc:ENCRYPTION_SECRET
      provider:
        url: https://pocketid.wevelsiep.com/
        clientId: urn:k8s:secret:whoami-oidc:CLIENT_ID
        clientSecret: urn:k8s:secret:whoami-oidc:CLIENT_SECRET
        usePkce: true
      scopes:
        - openid
        - profile
        - email
