testing/whoami/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-lan
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.wevelsiep.com`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: oidc-auth
  tls:
    options:
      name: mtls-required
      namespace: traefik
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-wan
  namespace: whoami
spec:
  entryPoints:
    - websecure-wan-traffic
  routes:
    - match: Host(`whoami.wevelsiep.com`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: oidc-auth
